force-app/main/default/objects/Support_Request_And_Question__c/Support_Request_And_Question__c.object-meta.xml
<CustomObject>
    <description>NPN : Contains all the Create A Support Request and Ask A Question records from NPN Community by NPN Partner users</description>
    <label>Support Request And Question</label>
    <nameField>
        <displayFormat>SRQ-{00000000}</displayFormat>
        <label>Support Request And Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Requests And Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>