force-app/main/default/objects/Support_Request_And_Question__c/fields/AAQ_Body__c.field-meta.xml
<CustomField>
    <fullName>AAQ_Body__c</fullName>
    <label>AAQ_Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>