force-app/main/default/objects/Support_Request_And_Question__c/fields/AAQ_Subject__c.field-meta.xml
<CustomField>
    <fullName>AAQ_Subject__c</fullName>
    <label>AAQ_Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>