force-app/main/default/objects/Support_Request_And_Question__c/fields/Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Number__c</fullName>
    <label>Contact Phone Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>