force-app/main/default/objects/Support_Request_And_Question__c/fields/Portal_Type__c.field-meta.xml
<CustomField>
    <fullName>Portal_Type__c</fullName>
    <label>Portal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lite</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>