force-app/main/default/objects/Support_Request_And_Question__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Log A Support Request</fullName>
            </value>
            <value>
                <fullName>Ask A Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>