force-app/main/default/objects/Support_Request_And_Question__c/fields/Steps_to_Reproduce_Problem__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_Reproduce_Problem__c</fullName>
    <label>Steps to Reproduce Problem</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>